--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "generative-inpainting-pytorch"]
 	path = generative-inpainting-pytorch
-	url = .\\generative-inpainting-pytorch\\
+	url = https://github.com/JerryWuZiJie/generative-inpainting-pytorch.git
